static/css/app.css
html, body {
  background-color: #fff;
}
body {
  padding-top: 60px;
}
.container > footer p {
  text-align: center; /* center align it with the container */
}

/* The white background content wrapper */
.content {
  background-color: #fff;
  -webkit-border-radius: 0 0 6px 6px;
     -moz-border-radius: 0 0 6px 6px;
          border-radius: 0 0 6px 6px;
}

/* modeladmin filters */
form.modeladmin-filters { margin: 0; }
form.modeladmin-filters ul { list-style-type: none; }
form.modeladmin-filters select.field { margin-right: 10px; }

div.form-wrapper { width: 100%; overflow: auto; }

form input[type="text"].datetime-widget { width: 100px; margin-right: 10px; }

div.sidebar li.active { font-weight: bold; }

table.table-striped td.links .inline { margin: 0; }
table.table-striped td.links .inline li { display: inline-block; }
table.table-striped td.links .inline li a {
  border-right: 1px solid #DDDDDD;
  padding-right: 5px;
}
table.table-striped td.links .inline li:last-child a {
  border-right: medium none;
}

table.table-narrow {
  width: inherit;
}

.bs-icon {
  float: left;
  margin: 18px 10px 0 0;
  opacity: .8;
}

.avatar         { position: relative; -webkit-border-radius: 5px; -moz-border-radius: 5px;border-radius: 5px;}
.message {
  position: relative;
  min-height: 56px;
  width: 300px;
  padding: 5px;
  margin-bottom: 10px;
  border: 1px solid #e3e3e3;
  -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
          border-radius: 10px;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
}
.bubble_mine {
  background-color: #e5ffe5;
}
.bubble_others {
  margin-left: 200px;
  background-color: #f5f5f5;
}

.btn-alternative {
  display: inline;
  margin-right: 5px;
}

.btn-alternative .btn {
  margin-left: 0px !important;
}

.message_content { margin-left: 56px; margin-top: -24px; margin-bottom: 0px;}
.message_name {
  position: absolute;
  margin-left: -20px;
  border: 1px solid #ebebeb;
  -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
          border-radius: 5px;
  background: #fff;
  padding: 0px 2px;
}

.message_name small {
  font-size: 80%;
}
.user-tablerow  {height: 60px}

.modal form {
  margin-bottom: 0px;
}

.typeahead-list {
  border: 1px solid #CCC;
  border-radius: 3px;
  height: 20px;
  width: 400px;
  border-spacing: 4px 5px;
  font-size: 12px;
  margin-left: 0px;
  display: table;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.typeahead-focus {
  border-color: rgba(82, 168, 236, 0.8);
  outline: 0;
  outline: thin dotted \9;
  /* IE6-9 */

  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
}

.typeahead-input {
  display: table-cell;
  width: 100%;
}

.typeahead-input input {
  border: none;
  padding: 0px;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  margin: 0px;
  width: 100%;
  font-size: 12px;
}

.typeahead-input input:focus {
  outline: 0;
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  box-shadow: none !important;
}

.typeahead-item {
  position: relative;
  padding: 0 5px;
  -moz-border-radius: 9px;
  -webkit-border-radius: 9px;
  border-radius: 9px;
  border: 1px solid #CAD8F3;
  background: #DEE7F8;
  cursor: default;
  display: table-cell;
  margin-right: 5px;
}

.typeahead-item:hover {
  background: #ccc;
}

a .icon-ok {
  margin-left: -15px;
  margin-right: 2px;
}

.m_deselected .icon-ok {
  visibility: hidden;
}

.m_action:hover .icon-ok {
  visibility: visible;
  background-position: -24px -96px; /* minus */
}

.m_deselected:hover .icon-ok {
  visibility: visible;
  background-position: 0 -96px; /* plus */
}

.dropdown-menu .disabled > a:hover {
  text-decoration: none;
  cursor: default;
  background-color: transparent;
  background-image: none;
}

/* makes alerts fill their popover parents if there */
.popover-alert .alert {
  margin: -9px -14px;
  font-size: 14px;
  padding: 9px;
}
/* removes x to close when in poppover */
.popover-alert .alert .close {
  display: none;
}

/*
.alert-popover {
  padding: 0px;
}

.alert-popover .alert {
  margin-bottom: 0px;
}

.alert-success {
  color: #468847;
  background-color: #dff0d8;
  border-color: #d6e9c6;
}

.alert-danger,
.alert-error {
  color: #b94a48;
  background-color: #f2dede;
  border-color: #eed3d7;
}

.alert-info {
  color: #3a87ad;
  background-color: #d9edf7;
  border-color: #bce8f1;
}*/

.alert-error+.arrow+{
  border-right-color: #f2dede !important;
}

.alert-info+.arrow {
  border-right-color: #d9edf7 !important;
}

.alert-success+.arrow {
  border-right-color: #dff0d8 !important;
}

.alert-message+.arrow {
  border-right-color: #fcf8e3 !important;
}

.m_userdetail table {
  margin-bottom: 0px;
}

.m_inplace input, .m_inplace textarea {
  margin-bottom: 0px;
  width: 100%;
  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
  box-sizing: border-box; 
}

.form-actions {
  margin-top: 0px;  
}

/* helpers */
.hidden { display: none; }

textarea#content {
  width: 600px;
}

textarea#metadata {
  width: 200px;
}

